maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:42: error: Unmatched closing brace '}' ignored here
}
^